<resources>
    <string name="app_name">My Chat</string>
    <string name="_22_30">22:30</string>
    <string name="simple_minimal_and_beauti">Simple , minimal and beauti...</string>
    <string name="hi_loe_whats_up_n_i_need_a_new_logo_for_group">Hi Loe. Whats up ?? \n I need a new logo for group.</string>
    <string name="ok_i_ll_start_next_week_n_send_me_documents_today">Ok, I`ll start next week. \n Send me documents today.</string>
    <string name="_22_32">22:32</string>
    <string name="oh_that_s_great">oh. That`s great 😍</string>
    <string name="_22_33">22:33</string>
    <string name="_22_31">22:31</string>
</resources>