<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/paddingNormal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/paddingNormal"
        android:gravity="right"
        tools:ignore="MissingConstraints">

        <LinearLayout
            style="@style/LinearLayout.Send">

            <TextView
                style="@style/TextSend"
                android:text="@string/hi_loe_whats_up_n_i_need_a_new_logo_for_group" />

            <ImageView
                style="@style/SeeMessage"/>

        </LinearLayout>

        <TextView
            style="@style/TextTime.Send"
            android:text="@string/_22_30" />

        <LinearLayout
            style="@style/LinearLayout.Send">

            <TextView
                style="@style/TextSend"
                android:text="@string/simple_minimal_and_beauti"/>

            <ImageView
                style="@style/SeeMessage"/>

        </LinearLayout>

        <TextView
            style="@style/TextTime.Send"
            android:text="@string/_22_31" />

        <LinearLayout
            style="@style/LinearLayout.Rev"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/TextRev"
                android:text="@string/ok_i_ll_start_next_week_n_send_me_documents_today" />

            <TextView
                style="@style/TextTime.Rev"
                android:text="@string/_22_32" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayout.Send">

            <TextView
                style="@style/TextSend"
                android:text="@string/oh_that_s_great" />

            <ImageView
                style="@style/SeeMessage"/>

        </LinearLayout>

        <TextView
            style="@style/TextTime.Send"
            android:text="@string/_22_33" />

    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayoutOption"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp"
        tools:ignore="MissingConstraints">

        <ImageView
            style="@style/SizeImageOption"
            android:src="@drawable/smiling_emoticon_square_face" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            style="@style/SizeImageOption"
            android:rotation="130"
            android:src="@drawable/ic__attachment"
            app:tint="@color/black" />

        <ImageView
            style="@style/SizeImageOption"
            android:layout_marginLeft="10dp"
            android:src="@drawable/microphone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>